--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,45 +2,23 @@ version: "3"
 
 services:
   loraserver:
-    image: mxcdocker/loraserver:0.1
+    image: loraserver/loraserver:3
     volumes:
       - ./configuration/loraserver:/etc/loraserver
-      - ./loraserver:/loraserver
-    depends_on:
-      - postgresql
-      - redis
-      - mosquitto
-    environment:
-      - DB_AUTOMIGRATE=true
-      - NET_ID=010203
-      - BAND=EU_863_870
-      - REDIS_URL=redis://redis:6379
-      - GW_MQTT_SERVER=tcp://mosquitto:1883
-      - GW_SERVER_JWT_SECRET=verysecret
-      - POSTGRES_DSN=postgres://loraserver:loraserver@postgres/loraserver?sslmode=disable
-      - TEST_POSTGRES_DSN=postgres://loraserver:loraserver@postgres/loraserver?sslmode=disable
-      - TEST_REDIS_URL=redis://redis:6379
-      - TEST_MQTT_SERVER=tcp://mosquitto:1883
 
   appserver:
-    image: mxcdocker/lora-app-server:0.2
+          # image: mxcdocker/lora-app-server:0.6
+    image: loraserver/lora-app-server:3      
     ports:
       - 8080:8080
-    volumes:
-      - ./configuration/lora-app-server:/etc/lora-app-server
-      - ./appserver:/lora-app-server
-    depends_on:
-      - postgresql
-      - redis
-      - mosquitto
-    environment:
-      - TEST_POSTGRES_DSN=postgres://loraserver_as:loraserver_as@postgres/loraserver_as?sslmode=disable
-      - TEST_REDIS_URL=redis://redis:6379
-      - TEST_MQTT_SERVER=tcp://mosquitto:1883
+        #    volumes:
+        #- ./:/lora-app-server
+            # - ./configuration/lora-app-server:/etc/lora-app-server
+        #    entrypoint:
+        #- lora-app-server
     tty: true
-    networks:
-      - default
-      - mxprotocol-server_2appserver
+    #entrypoint:
+    # - lora-app-server
 
   gatewaybridge:
     image: loraserver/lora-gateway-bridge:3
@@ -59,12 +37,6 @@ services:
     volumes:
       - ./configuration/postgresql/initdb:/docker-entrypoint-initdb.d
       - postgresqldata:/var/lib/postgresql/data
-    #  - ./appserver/.docker-compose/postgresql/initdb:/docker-entrypoint-initdb.d
-    # Added from docker-compose.yml of mxc-loraserver
-    environment:  
-      - POSTGRES_PASSWORD=loraserver
-      - POSTGRES_USER=loraserver
-      - POSTGRES_DB=loraserver
 
   redis:
     image: redis:5-alpine
@@ -76,10 +48,66 @@ services:
     ports:
       - 1883:1883
 
+  webserver:
+    image: nginx:mainline-alpine
+    container_name: webserver
+    #restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - web-root:/var/www/html
+      - ./nginx-conf:/etc/nginx/conf.d
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - dhparam:/etc/ssl/certs
+    depends_on:
+      - appserver
+        # networks:
+        #- app-network
+
+  m2m:
+    image: mxcdocker/node-helloworld:0.1
+    container_name: m2m
+    ports:
+     - "4000:4000"
+
+       # certbot:
+       #image: certbot/certbot
+       #container_name: certbot
+       #volumes:
+       #- certbot-etc:/etc/letsencrypt
+       #- certbot-var:/var/lib/letsencrypt
+       #- web-root:/var/www/html
+   # depends_on:
+   #   - webserver
+   # command: certonly --webroot --webroot-path=/var/www/html --email naser@mxc.org --agree-tos --no-eff-email --force-renewal -d m2m.demo.cloud.mxc.org 
+   #tty: true
+
 volumes:
   postgresqldata:
   redisdata:
-      
-networks:
-  mxprotocol-server_2appserver:
-    external: true
+  certbot-etc:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/naser/loraserver-docker/certbot/conf
+      o: bind    
+  certbot-var:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/naser/loraserver-docker/certbot/lib
+      o: bind
+  web-root:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/naser/loraserver-docker/views/
+      o: bind
+  dhparam:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/naser/loraserver-docker/dhparam/
+      o: bind
